--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ Learn more at: <a href="https://deepspace.game">https://deepspace.game</a><br/>
 Buy DEEPSPACE (DPS) at: <a href="https://app.deepspace.game">https://app.deepspace.game</a>
 </p>
 
+<p>Pro Tip: Don't have a referral wallet? Check out the docs here on getting one: <a href="https://docs.deepspace.game/swap-site/referral-bonus">https://docs.deepspace.game/swap-site/referral-bonus</a></p>
+	
 <p><i>Tip: Check the console log for the full JSON response from the token stat server</i></p>
 <p>Pro Tip: Command Supported: <a href="https://token.deepspace.game/referral/summary">https://token.deepspace.game/referral/summary</a></p>
 <p>Pro Tip: DEEPSPACE (DPS) Token API Endpoint: <a href="https://token.deepspace.game/api">https://token.deepspace.game/referral</a></p>
