--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <meta http-equiv="Pragma" content="no-cache">
 <base target="_blank">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1WFHR4JYQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z1WFHR4JYQ');
+</script>
+	
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script>
 	let xhr = new XMLHttpRequest();
