--- a/details.html
+++ b/details.html
@@ -71,7 +71,7 @@ Buy DEEPSPACE (DPS) at: <a href="https://app.deepspace.game">https://app.deepspa
 	
 <p><i>Tip: Check the console log for the full JSON response from the token stat server</i></p>
 <p>Pro Tip: Leardboard Referral Stats located at: <a href="https://referrals.deepspace.game/">https://referrals.deepspace.game/</a></p>
-<p>Pro Tip: Detailed Referral Stats located at: <a href="https://referrals.deepspace.game/detailed">https://referrals.deepspace.game/detailed</a></p>
+<p>Pro Tip: Detailed Referral Stats located at: <a href="https://referrals.deepspace.game/details">https://referrals.deepspace.game/details</a></p>
 <p>Pro Tip: Command Supported: <a href="https://referrals.deepspace.game/api/summary">https://referrals.deepspace.game/api/summary</a></p>
 <p>Pro Tip: DEEPSPACE (DPS) Token API Endpoint: <a href="https://referrals.deepspace.game/api">https://referrals.deepspace.game/api</a></p>
 <p>Pro Tip: OPEN SOURCE on GitHub: <a href="https://github.com/deepspace-game/referral-site">https://github.com/deepspace-game/referral-site</a></p>
