--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   gtag('config', 'G-Z1WFHR4JYQ');
 </script>
-	
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script>
 	let xhr = new XMLHttpRequest();
@@ -41,11 +41,13 @@
 		  	walletAddress = referralList[i]["address"];
 		  	referrals = referralList[i]["referrals"];
 			
-			document.getElementById('referralList').innerHTML += "<tr>";
-			document.getElementById('referralList').innerHTML += "<td>" + i + "</td>";
-		  	document.getElementById('referralList').innerHTML += "<td><a href=\"https://bscscan.com/token/0xf275e1AC303a4C9D987a2c48b8E555A77FeC3F1C?a=" + walletAddress + "\">" + walletAddress + "</a></td>";
-			document.getElementById('referralList').innerHTML += "<td>" + referrals + "</td>";
-			document.getElementById('referralList').innerHTML += "</tr>";
+			build = "<tr>";
+			build += "<td>" + i + "</td>";
+		  	build += "<td><a href=\"https://bscscan.com/token/0xf275e1AC303a4C9D987a2c48b8E555A77FeC3F1C?a=" + walletAddress + "\">" + walletAddress + "</a></td>";
+			build += "<td>" + referrals + "</td>";
+			build += "</tr>";
+			  
+			$(table).find('referralList').append(build);
 		  }
 			
 		  lastUpdated = tokenData["last_updated"];
@@ -75,19 +77,12 @@ Buy DEEPSPACE (DPS) at: <a href="https://app.deepspace.game">https://app.deepspa
 <p>Pro Tip: DEEPSPACE (DPS) Token API Endpoint: <a href="https://referrals.deepspace.game/api">https://referrals.deepspace.game/api</a></p>
 <p>Pro Tip: OPEN SOURCE on GitHub: <a href="https://github.com/deepspace-game/referral-site">https://github.com/deepspace-game/referral-site</a></p>
 
-<table>
+<table id="referralList">
 <tr>
 	<th>Rank:</th>
 	<th>Wallet Address:</th>
 	<th>Referrals:</th>
 </tr>
-<div id="referralList">
-<tr>
-	<td>N/A</td>
-	<td>N/A</td>
-	<td>N/A</td>
-</tr>
-</div>
 </table>
 	
 <br><div id="lastUpdated">Last Updated: N/A</div>
