--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			build += "<td>" + referrals + "</td>";
 			build += "</tr>";
 			  
-			$(table).find('referralList').append(build);
+			$('#referralList').append(build);
 		  }
 			
 		  lastUpdated = tokenData["last_updated"];
