--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Buy DEEPSPACE (DPS) at: <a href="https://app.deepspace.game">https://app.deepspa
 <p>Pro Tip: DEEPSPACE (DPS) Token API Endpoint: <a href="https://referrals.deepspace.game/api">https://referrals.deepspace.game/api</a></p>
 <p>Pro Tip: OPEN SOURCE on GitHub: <a href="https://github.com/deepspace-game/referral-site">https://github.com/deepspace-game/referral-site</a></p>
 
-<table id="referralList">
+<table id="referralList" border="1">
 <tr>
 	<th>Rank:</th>
 	<th>Wallet Address:</th>
