--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
 		  referralList = tokenData["referral_list"];
 		  document.getElementById('referralList').innerHTML = "Referral List:<br><br>";
 
+		build = "<tr>";
+		build += "<th>Rank:</th>";
+		build += "<th>Wallet Address:</th>";
+		build += "<th>Referrals:</th>";
+		build += "</tr>";
+
+		$('#referralList').append(build);
+			
 		  for (let i = 0; i < referralList.length; i++) {
 		  	walletAddress = referralList[i]["address"];
 		  	referrals = referralList[i]["referrals"];
@@ -77,12 +85,8 @@ Buy DEEPSPACE (DPS) at: <a href="https://app.deepspace.game">https://app.deepspa
 <p>Pro Tip: DEEPSPACE (DPS) Token API Endpoint: <a href="https://referrals.deepspace.game/api">https://referrals.deepspace.game/api</a></p>
 <p>Pro Tip: OPEN SOURCE on GitHub: <a href="https://github.com/deepspace-game/referral-site">https://github.com/deepspace-game/referral-site</a></p>
 
+<h3>Referral List:</h3>
 <table id="referralList" border="1">
-<tr>
-	<th>Rank:</th>
-	<th>Wallet Address:</th>
-	<th>Referrals:</th>
-</tr>
 </table>
 	
 <br><div id="lastUpdated">Last Updated: N/A</div>
