--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Buy DEEPSPACE (DPS) at: <a href="https://app.deepspace.game">https://app.deepspa
 <p>Pro Tip: DEEPSPACE (DPS) Token API Endpoint: <a href="https://referrals.deepspace.game/api">https://referrals.deepspace.game/api</a></p>
 <p>Pro Tip: OPEN SOURCE on GitHub: <a href="https://github.com/deepspace-game/referral-site">https://github.com/deepspace-game/referral-site</a></p>
 
-<h3>Referral Leardboard:</h3>
+<h3>Referral Leaderboard:</h3>
 <table id="referralList" border="1">
 </table>
 	
